- Added run-time configurable backtracking/recursion limits for PCRE. (Andrei)
- Added preg_last_error(). (Andrei)
- Added support for Apache 2.2 handler in the Windows distro. (Edin)
- Added pg_field_table() function. (Edin)
- Added implementation of curl_multi_info_read(). (Brian)
- Added RFC2397 (data: stream) support. (Marcus)
- Fixed bug #37416 (iterator_to_array() hides exceptions thrown in rewind()
  method). (Tony)
- Fixed bug #37413 (Rejected versions of flex that don't work). (Ilia)
- Fixed bug #37394 (substr_compare() returns an error when offset equals 
  string length). (Ilia)
- Fixed bug #37392 (Unnecessary call to OCITransRollback() at the end of 
  request). (Tony)
- Fixed bug #37376 (fastcgi.c compile fail with gcc 2.95.4). (Ilia)
- Fixed bug #37368 (Incorrect timestamp returned for strtotime()). (Derick)
- Fixed bug #37348 (make PEAR install ignore open_basedir). (Ilia)
- Fixed bug #37313 (sigemptyset() used without including <signal.h>).
  (jdolecek)
- Fixed bug #37306 (max_execution_time = max_input_time). (Dmitry)
- Fixed bug #37244 (Added strict flag to base64_decode() that enforces 
  RFC3548 compliance). (Ilia)
- Fixed bug #36630 (umask not reset at the end of the request). (Ilia)

04 May 2006, PHP 5.1.4
- Added "capture_peer_cert" and "capture_peer_cert_chain" context options
  for SSL streams. (Wez).
- Added PDO::PARAM_EVT_* family of constants. (Sara)
- Fixed possible crash in highlight_string(). (Dmitry)
- Fixed bug #37291 (FastCGI now longer works with isapi_fcgi.dll). (Dmitry)
- Fixed bug #37277 (cloning Dom Documents or Nodes does not work). (Rob)
- Fixed bug #37276 (problems with $_POST array). (Dmitry)
- Fixed bug #36632 (bad error reporting for pdo_odbc exec UPDATE). (Wez).
- Fixed bug #35552 (crash when pdo_odbc prepare fails). (Wez).

28 Apr 2006, PHP 5.1.3
- Updated bundled PCRE library to version 6.6. (Andrei)
- Moved extensions to PECL:
  . ext/msession (Derick)
- Reimplemented FastCGI interface. (Dmitry)